2002-07-05  Reinhard Max  <max@suse.de>

        * generic/tclClock.c (FormatClock): Convert the format string to
        UTF8 before calling TclpStrftime, so that non-ASCII characters
        don't get mangled when the result string is being converted back.
        * tests/clock.test: Added a test for that.

2002-07-03  Don Porter  <dgp@users.sourceforge.net>

        * library/auto.tcl: Fix [tcl_findLibrary] to be sure it sets
        $varName only if a successful library script is found.  [Bug 577033]

2002-07-03  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompCmds.c (TclCompileCatchCmd): return
	TCL_OUT_LINE_COMPILE instead of TCL_ERROR: let the failure happen
	at runtime so that it can be caught [Bug 577015].

2002-06-21  Don Porter  <dgp@users.sourceforge.net>

	* library/init.tcl:  Corrected comments and namespace style
	issues.  Thanks to Bruce Stephens. [Bug 572025]

2002-06-06  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclUnixInit.c (TclpSetInitialEncodings): 8.4 backport 
	of default fallback encoding set with TCL_DEFAULT_ENCODING
	* unix/tcl.m4 (Darwin): set TCL_DEFAULT_ENCODING to utf-8 on
	MacOSX (where posix file apis expect utf-8, not iso8859-1).
	* unix/configure: regen
	* unix/Makefile.in: set DYLD_LIBRARY_PATH in parallel
	to LD_LIBRARY_PATH for MacOSX dynamic linker.
	* generic/tclEnv.c (TclSetEnv): fix env var setting on
	MacOSX (adapted from patch #524352 by jkbonfield).

2002-06-05  Daniel Steffen  <das@users.sourceforge.net>

	* mac/tclMacResource.c (Tcl_MacConvertTextResource): added utf
	conversion of text resource contents.
	* mac/tclMacResource.c (Tcl_MacEvalResource): overlooked 8.4
	backport of resource name utf conversion.
	* tests/macFCmd.test (macFCmd-1.2): allow CWIE creator.
	* tests/ioCmd.test (iocmd-8.15): added mac specific result string.

2002-05-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/clock.test: added clock-9.1
	* compat/strftime.c:
	* generic/tclClock.c:
	* generic/tclInt.decls: